@@ -32,6 +32,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13959: Make imp.reload() always use a module's __loader__ to perform
+  the reload.
+
 - Issue #13959: Add imp.py and rename the built-in module to _imp, allowing for
   re-implementing parts of the module in pure Python.
 
